# RisohEditor

./: .gitignore  CMakeLists.txt  ChangeLog.txt  ChangeLog_es.txt  ChangeLog_id.txt  ChangeLog_it.txt  ChangeLog_ja.txt  ChangeLog_ko.txt  ChangeLog_pt_BR.txt  ChangeLog_uk.txt  README_ru.txt  TRANSLATORS.txt  installer32.iss  installer64.iss  installer_languages.iss
EGA-samples/: ConvertJapaneseToChinese.ega  ConvertJapaneseToKorean.ega  ConvertRussianToUkrainian.ega  DeleteAll.ega  DeleteHebrew.ega  DeleteJapanese.ega  DeleteKorean.ega  DeleteNonEnglish.ega  DeleteRussian.ega  DeleteSimplifiedChinese.ega  ExtractCursors.ega  ExtractIcons.ega  FindTarget.ega  NeutralToEnglish.ega  RES_clone_by_lang.ega  RES_delete.ega  RES_set_binary.ega
MyWndCtrl/: CMakeLists.txt  MyWndCtrl.cpp
data/: Constants.txt
data/lib/gcc/i686-w64-mingw32/10.2.0/include/: winres.h
mcdx/: CMakeLists.txt  mcdx.cpp
src/: AccelRes.cpp  CMakeLists.txt  Common.hpp  ConstantsDB.cpp  ConstantsDB.hpp  DialogRes.cpp  DlgInit.h  DlgInitRes.cpp  EgaBridge.cpp  EgaBridge.hpp  IconRes.cpp  IconRes.hpp  MAddBitmapDlg.hpp  MAddCtrlDlg.cpp  MAddCtrlDlg.hpp  MAddCursorDlg.hpp  MAddIconDlg.hpp  MAddResDlg.hpp  MAddResIDDlg.hpp  MAdviceResHDlg.hpp  MBmpView.hpp  MByteStreamEx.hpp  MChooseLangDlg.hpp  MCloneInNewLangDlg.hpp  MCloneInNewNameDlg.hpp  MCloneInNewTypeDlg.hpp  MComboBox.hpp  MComboBoxAutoComplete.hpp  MConfigDlg.hpp  MConstantDlg.hpp  MCopyToMultiLangDlg.hpp  MCtrlDataDlg.hpp  MCtrlPropDlg.cpp  MCtrlPropDlg.hpp  MDfmSettingsDlg.hpp  MDialogFontSubstDlg.hpp  MDlgInitDlg.hpp  MDlgPropDlg.hpp  MDropdownArrow.hpp  MEditAccelDlg.hpp  (+80 more)
src/lang/: de_DE.rc  en_US.rc  es_ES.rc  fi_FI.rc  fr_FR.rc  id_ID.rc  it_IT.rc  ja_JP.rc  ko_KR.rc  pl_PL.rc  pt_BR.rc  pt_PT.rc  ru_RU.rc  tr_TR.rc  uk_UA.rc  zh_CN.rc  zh_TW.rc
src/res/: Manifest_1.manifest
win32-samples/DialogBox/: CMakeLists.txt  DialogBox.cpp
win32-samples/MainWnd/: CMakeLists.txt  MainWnd.cpp
win32-samples/ToolbarTest/: CMakeLists.txt  ToolbarTest.cpp
